syntax = "proto3";

package netsvr.topicsConnCountReq;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//business向worker请求网关中的某几个主题的连接数
message TopicsConnCountReq {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
  //需要获取连接数的主题
  repeated string topics = 2;
  //是否返回全部主题的连接数，如果设置为true，则网关会忽略topics字段的值
  //如果主题数量太多，比如有上万个，则有可能导致网关反应变慢，或者是返回的时候tcp包太大导致tcp连接断开
  bool getAll = 3;
}